mygateway/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: envoytest
  annotations:
    #envoy.ingress.kubernetes.io/rewrite-target: "/\\1"
    envoy.ingress.kubernetes.io/ratelimit-max: 5
    envoy.ingress.kubernetes.io/cors-enable: "true"
    envoy.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, DELETE, POST, OPTIONS"
    envoy.ingress.kubernetes.io/cors-allow-origin: "*"
    envoy.ingress.kubernetes.io/lua-block: |
      function envoy_on_response(response_handle)
         response_handle:headers():add("api-version", "1.0")
      end
spec:
  rules:
    - host: envoy.virtuallain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myservicea
                port:
                  number: 80
