mygateway/test/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: envoytest2
  annotations:
    envoy.ingress.kubernetes.io/rewrite-target: "/\\1"
spec:
  ingressClassName: myenvoy
  rules:
    - host: envoy2.virtuallain.com
      http:
        paths:
          - path: /v2/(.*?)
            pathType: Prefix
            backend:
              service:
                name: test
                port:
                  number: 80
